[tool.poetry]
name = "celery-sqlmodel-beat"
version = "0.1.0"
description = ""
authors = ["Cray"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.2.0"
celery = "^5.3.6"
sqlmodel = "^0.0.16"
cron-descriptor = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
